1.8.3
-----
1. Show hover buttons for favourites, even if first favourite is a folder.
2. Add option to rename podcast.
3. Add ability for APK app to control all, or active, player during call.
4. List players on mysqueezebox.com
5. Simplify moving code to move player from other server, only need to issue
   'disconnect' command.

1.8.2
-----
 1. Fix hovering of items in grid when items have no sub-title.
 2. When using year for jumplist only use last 2 digits.
 3. Pressing on red error icon (shown when connection is lost) will produce a
    menu allowing access to app settings - when Material is loaded within app.
 4. Allow app to specify a quit action. If so, this will be shown in main menu.
 5. Move 'Application settings' into main menu.
 6. Fix not showing track numbers (if configured to do so) in now-playing.
 7. Smooth scroll 'Information' dialog to 'Plugins' section when there are
    updates available - to make it obvious what has happened.
 8. Use current track details for 'Go to XXX' entries.
 9. Add 'Go to composer' for tracks in composer genres that have composer set.
10. Fix 'Inserted XXX into the play queue' messages not showing.
11. Use current player when calling custom action from main menu.
12. Allow specifying toolbar title for iframe custom actions.
13. Map MusicMagic and SugarCube icons.
14. Better integration of 'MusicIP Mood Mix'
15. Fix left/right swipe detection.

1.8.1
-----
1. Fix multi-disc handling breaking queue display.
2. Fix starting track when selecting 'Play album from track' on a multi-cd album
   where LMS is set to group discs.
3. Remove 'Play this mix' item even if there are no tracks for mix.
4. Adjust portrait max size calculation.
5. Add work-around for older browser's that don't support CSS min()
6. When browsing genres, show 'All Artists' and 'Album Artists' if LMS set to
   use two separate lists, and also show 'Compilations'
7. If group is created with no players, assign a list of basic default browse
   modes.